SET(APPLICATION_NAME Move)

SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /NODEFAULTLIB:LIBCMTD")
  
ADD_DEFINITIONS(-DCONSOLE -DGLUT_NO_LIB_PRAGMA)
ADD_DEFINITIONS(-DGLEW_BUILD)
#FIND_PACKAGE(GLEW REQUIRED)
#INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIR})    

FIND_PACKAGE(OpenGL REQUIRED)
INCLUDE_DIRECTORIES(
	
)  
# 设置头文件

FILE(GLOB ${APPLICATION_NAME}_SRCS "*.cpp" )
FILE(GLOB ${APPLICATION_NAME}_HEADERS "./*.h")


#打包相关文件成可执行文件
ADD_EXECUTABLE(${APPLICATION_NAME} 
   ${${APPLICATION_NAME}_HEADERS}
   ${${APPLICATION_NAME}_SRCS}
)

#设置Link依赖包
#TARGET_LINK_LIBRARIES(${APPLICATION_NAME}
#)

LINK_WITH_VARIABLES(${APPLICATION_NAME}

 )
 
#设置Link依赖包
TARGET_LINK_LIBRARIES(${APPLICATION_NAME}
	FREEGLUT::FREEGLUT
	GLEW::GLEW
	GLTools
)

SET (TARGET_OUTPUT_NAME ${APPLICATION_NAME} )
SET_TARGET_PROPERTIES( ${APPLICATION_NAME} PROPERTIES OUTPUT_NAME ${TARGET_OUTPUT_NAME} )
SET_TARGET_PROPERTIES(${APPLICATION_NAME} PROPERTIES DEBUG_OUTPUT_NAME "${TARGET_OUTPUT_NAME}${CMAKE_DEBUG_POSTFIX}")
SET_TARGET_PROPERTIES(${APPLICATION_NAME} PROPERTIES RELEASE_OUTPUT_NAME "${TARGET_OUTPUT_NAME}${CMAKE_RELEASE_POSTFIX}")

SET_TARGET_PROPERTIES(${APPLICATION_NAME} PROPERTIES PROJECT_LABEL "App ${APPLICATION_NAME}")
SET_TARGET_PROPERTIES(${APPLICATION_NAME} PROPERTIES FOLDER ${THIS_FOLDER_NAME}) 

#my_add_link_flags(${APPLICATION_NAME} "/SAFESEH:NO")
